--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -1,76 +1,69 @@
 @import "../../sass/variables";
-
-:host{
+:host {
   @extend %main-content;
 }
 
-.comment-container{
+.comment-container {
   width: 100%;
   border: 1px solid $color_dark2;
 }
 
-.header{
+.header {
   @extend %clearfix;
   background: $color_main2;
   text-align: center;
   font-weight: bold;
-
-  .username-header, .comments-header{
+  .username-header, .comments-header {
     float: left;
     border: 1px solid $color_dark2;
     box-sizing: border-box;
-    padding:5px;
+    padding: 5px;
   }
-  .username-header{
+  .username-header {
     width: 25%;
     min-width: 25%;
   }
-  .comments-header{
+  .comments-header {
     width: 75%;
   }
 }
 
-.leave-comment{
+.leave-comment {
   width: 100%;
   background: $color_main1;
   border-collapse: collapse;
   margin-top: 10px;
-
-  .header-row{
+  .header-row {
     background: $color_main2;
     text-align: center;
   }
-
-  td{
+  td {
     border: 2px solid $color_dark2;
     padding: 5px;
   }
-
-  .first-cell{
+  .first-cell {
     width: 25%;
   }
-
-  button{
+  button {
     @extend %button;
     padding: 2px 5px;
     margin: 5px 2px;
     min-width: 24px;
   }
-  textarea, .username{
+  textarea, .username {
     max-width: 450px;
-    width: 80%;
+    width: 90%;
     font-family: $main_font;
   }
-  label{
+  label {
     @extend %nodrag;
   }
 }
 
-.error{
+.error {
   color: #c10000;
 }
 
-.disabled{
+.disabled {
   opacity: 0.7;
 }
-
