--- a/src/app/shared/components/textarea-with-tags/textarea-with-tags.component.scss
+++ b/src/app/shared/components/textarea-with-tags/textarea-with-tags.component.scss
@@ -1,21 +1,20 @@
 @import "../../../../sass/variables";
-
-:host{
+:host {
   display: block;
 }
 
-button{
+button {
   @extend %button;
   padding: 2px 5px;
   margin: 5px 2px;
   min-width: 24px;
 }
 
-textarea{
-  width: 80%;
+textarea {
+  width: 90%;
   font-family: $main_font;
 }
 
-.disabled{
-opacity: 0.7;
+.disabled {
+  opacity: 0.7;
 }
